tests/baselines/reference/ifElseWithStatements1.errors.txt
==== tests/cases/compiler/ifElseWithStatements1.ts (2 errors) ====
    if (true)
        f();
        ~
!!! error TS2095: Could not find symbol 'f'.
    else
        f();
        ~
!!! error TS2095: Could not find symbol 'f'.
    
    function foo(): boolean {
        if (true)
            return true;
        else
            return false;
    }
    